--- a/index.html
+++ b/index.html
@@ -50,6 +50,66 @@
 </a>
     </header>
 
+    <main class="container">
+        <div class="slider">
+            <div class="slide slide-text-light slide-summer">
+
+                <div class="slide-content">
+                    <h2 class="slide-title">Неделя летних овощей!</h2>
+                    <p class="slide-text">
+                        Специальная овощная корзина. Новые продукты, специальные цены, скидки!
+                    </p>
+                    <a href="#" class="button button-primary">Заказать со скидкой</a>
+                </div>
+                <!-- /.slide-content -->
+                
+            </div>
+            <!-- /.slide -->
+        </div>
+        <!-- /.slider -->
+
+        <div class="promo">
+            <section class="card card-text-light sweet-basket">
+                <img src="./images/sweet-basket.png" alt="sweet basket" class="card-image">
+                <div class="card-header">
+                    <h3 class="card-title">Сладкая корзина</h3>
+                    <p class="card-discription">
+                        Произвольный выбор
+                        десертов по Вашему
+                        желанию.
+                    </p>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-footer">
+                    <strong class="card-price">ОТ 1 300 ₽</strong>
+                    <span class="card-dilivery">стоимость доставки до 200 ₽</span>
+                    <a href="#" class="button button-defaul">Собрать корзину</a>
+                </div>
+                <!-- /.card-footer -->
+            </section>
+            <!-- /.card -->
+            <section class="card card-text-light min-h">
+                <img src="./images/min-h.png" alt="min-h" class="card-image">
+                <div class="card-header">
+                    <h3 class="card-title">Минимум усилий</h3>
+                    <p class="card-discription">
+                        Произвольный выбор
+                        продуктов по Вашему
+                        желанию.
+                    </p>
+                </div>
+                <!-- /.card-header -->
+                <div class="card-footer">
+                    <strong class="card-price">ОТ 700 ₽</strong>
+                    <span class="card-dilivery">стоимость доставки до 200 ₽</span>
+                    <a href="#" class="button button-defaul">Собрать корзину</a>
+                </div>
+                <!-- /.card-footer -->
+            </section>
+            <!-- /.card -->
+        </div>
+        <!-- /.promo -->
+    </main>
 </body>
 
 </html>
