--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <!-- /.slide -->
                 </div>
                 <div class="swiper-slide">
-                    <div class="slide slide-text-light slide-summer">
+                    <div class="slide slide-text-light slide-autunn">
                         <div class="slide-content">
                             <h2 class="slide-title">Неделя весенних овощей!</h2>
                             <p class="slide-text">
@@ -91,7 +91,7 @@
                     <!-- /.slide -->
                 </div>
                 <div class="swiper-slide">
-                    <div class="slide slide-text-light slide-summer">
+                    <div class="slide slide-text-light slide-winter">
                         <div class="slide-content">
                             <h2 class="slide-title">Неделя зимних овощей!</h2>
                             <p class="slide-text">
